src/objects/Rehab_Project__c.object
<CustomObject>
    <description>Rehab - the Main object</description>
    <fields>
        <fullName>APN__c</fullName>
        <label>APN</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anniversary_Date__c</fullName>
        <label>Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Received__c</fullName>
        <label>Application Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Submitted__c</fullName>
        <label>Application Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraised_Value__c</fullName>
        <label>Appraised Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Notice__c</fullName>
        <label>Approval Notice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned__c</fullName>
        <label>Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audit__c</fullName>
        <label>Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bathrooms__c</fullName>
        <label>Bathrooms</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bedrooms__c</fullName>
        <label>Bedrooms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bid_Due_Date__c</fullName>
        <label>Bid Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Over Income</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>LBP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel__c</fullName>
        <label>Cancel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Census_Track__c</fullName>
        <label>Census Track</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>San_Diego_Cities</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clearance_Amount__c</fullName>
        <label>Clearance Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Clearance_Check_Date__c</fullName>
        <label>Clearance Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Clearance_Clear_Date__c</fullName>
        <label>Clearance Clear Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Clearance_Contractor_Old__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clearance Contractor_Old</label>
        <referenceTo>Rehab_Contractor__c</referenceTo>
        <relationshipLabel>Rehab Projects</relationshipLabel>
        <relationshipName>Rehab_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clearance_Contractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clearance Contractor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rehab Projects</relationshipLabel>
        <relationshipName>Rehab_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clearance_Date__c</fullName>
        <label>Clearance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Clearance_Invoice_Number__c</fullName>
        <label>Clearance Invoice Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clearance_Notice__c</fullName>
        <label>Clearance Notice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Clearance_Order_Date__c</fullName>
        <label>Clearance Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Clearance_Result__c</fullName>
        <label>Clearance Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Rehab_Test_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clearance_Test_Type__c</fullName>
        <label>Clearance Test Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Rehab_Test_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Out__c</fullName>
        <label>Close Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_1_Dollars__c</fullName>
        <label>Contract 1 Dollars</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_2_Dollars__c</fullName>
        <label>Contract 2 Dollars</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_3_Lead_Dollars__c</fullName>
        <label>Contract 3 (Lead) Dollars</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contractor_1_Old__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contractor 1 Old</label>
        <referenceTo>Rehab_Contractor__c</referenceTo>
        <relationshipLabel>Rehab Projects (Contractor 1)</relationshipLabel>
        <relationshipName>Rehab_Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contractor_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contractor 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rehab Projects (Contractor 1 1)</relationshipLabel>
        <relationshipName>Rehab_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contractor_2_Old__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contractor 2 Old</label>
        <referenceTo>Rehab_Contractor__c</referenceTo>
        <relationshipLabel>Rehab Projects (Contractor 2)</relationshipLabel>
        <relationshipName>Rehab_Projects4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contractor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contractor 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rehab Projects (Contractor 2 1)</relationshipLabel>
        <relationshipName>Rehab_Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contractor_3_Old__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contractor 3 Old</label>
        <referenceTo>Rehab_Contractor__c</referenceTo>
        <relationshipLabel>Rehab Projects (Contractor 3)</relationshipLabel>
        <relationshipName>Rehab_Projects5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contractor_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contractor 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rehab Projects (Contractor 3 1)</relationshipLabel>
        <relationshipName>Rehab_Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contractor_Paid_Relocation_Dollars__c</fullName>
        <label>Contractor Paid Relocation Dollars</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Council_District__c</fullName>
        <label>Council District</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELB_Investment__c</fullName>
        <label>ELB Investment</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ELB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ELB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligability_Approval__c</fullName>
        <label>Eligability Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evaluation_Notice__c</fullName>
        <label>Evaluation Notice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flood_Zone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flood Zone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fund_Date__c</fullName>
        <label>Fund Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Notice__c</fullName>
        <label>General Notice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HC_Grant_Dollars__c</fullName>
        <label>HC Grant Dollars</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HC_Loan_Dollars__c</fullName>
        <label>HC Loan Dollars</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Housing_Construction_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Housing Construction Specialist</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Rehab Projects</relationshipLabel>
        <relationshipName>Rehab_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_HCS__c</fullName>
        <label>Legacy HCS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abran Quevedo</fullName>
                </value>
                <value>
                    <fullName>Adams/Geis</fullName>
                </value>
                <value>
                    <fullName>Al Shaw</fullName>
                </value>
                <value>
                    <fullName>Al Slomski</fullName>
                </value>
                <value>
                    <fullName>AQG</fullName>
                </value>
                <value>
                    <fullName>Ayala/Dean</fullName>
                </value>
                <value>
                    <fullName>Ayala/Helton</fullName>
                </value>
                <value>
                    <fullName>Cady/Vincent</fullName>
                </value>
                <value>
                    <fullName>Carlos C DeBaca</fullName>
                </value>
                <value>
                    <fullName>Cecil Davis</fullName>
                </value>
                <value>
                    <fullName>DA</fullName>
                </value>
                <value>
                    <fullName>DA/JI</fullName>
                </value>
                <value>
                    <fullName>Dan Cady</fullName>
                </value>
                <value>
                    <fullName>Dave Scrimger</fullName>
                </value>
                <value>
                    <fullName>DB</fullName>
                </value>
                <value>
                    <fullName>DEW</fullName>
                </value>
                <value>
                    <fullName>DG</fullName>
                </value>
                <value>
                    <fullName>Don Evers</fullName>
                </value>
                <value>
                    <fullName>EWE</fullName>
                </value>
                <value>
                    <fullName>FB</fullName>
                </value>
                <value>
                    <fullName>FB/LT</fullName>
                </value>
                <value>
                    <fullName>FB/RV</fullName>
                </value>
                <value>
                    <fullName>FB/SD</fullName>
                </value>
                <value>
                    <fullName>FDW</fullName>
                </value>
                <value>
                    <fullName>FG</fullName>
                </value>
                <value>
                    <fullName>FG/RV</fullName>
                </value>
                <value>
                    <fullName>FG/SD</fullName>
                </value>
                <value>
                    <fullName>FVR</fullName>
                </value>
                <value>
                    <fullName>Geis/Gelbman</fullName>
                </value>
                <value>
                    <fullName>GG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limited_Test__c</fullName>
        <label>Limited Test</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Approval__c</fullName>
        <label>Loan Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <label>Mailing Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Apt_Number__c</fullName>
        <label>Mailing Apt Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <label>Mailing State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <label>Mailing Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip__c</fullName>
        <label>Mailing Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map__c</fullName>
        <label>Map</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Area_Program__c</fullName>
        <formula>Master_Target_Area__r.Program__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Area Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Target_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Target Area</label>
        <referenceTo>Area_Program__c</referenceTo>
        <relationshipLabel>Rehab Projects</relationshipLabel>
        <relationshipName>Rehab_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_Displace_Notice__c</fullName>
        <label>Non Displace Notice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OGM_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OGM Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Occupancy__c</fullName>
        <label>Occupancy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Occupied_Rental_Units__c</fullName>
        <label>Occupied Rental Units</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Amount__c</fullName>
        <label>Other Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Check_Date__c</fullName>
        <label>Other Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Clear_Date__c</fullName>
        <label>Other Clear Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Contractor_TaxID_Old__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other Contractor TaxID Old</label>
        <referenceTo>Rehab_Contractor__c</referenceTo>
        <relationshipLabel>Rehab Projects (Other Contractor TaxID)</relationshipLabel>
        <relationshipName>Rehab_Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Contractor_TaxID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other Contractor TaxID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rehab Projects (Other Contractor TaxID 1)</relationshipLabel>
        <relationshipName>Rehab_Projects4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Invoice_Number__c</fullName>
        <label>Other Invoice Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Loans_Grants_Dollars__c</fullName>
        <label>Other Loans/Grants Dollars</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Order_Date__c</fullName>
        <label>Other Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Result__c</fullName>
        <label>Other Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Rehab_Test_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Test_Type__c</fullName>
        <label>Other Test Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Rehab_Test_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Out_To_Bid__c</fullName>
        <label>Out To Bid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_1_Age__c</fullName>
        <label>Owner 1 Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_1_Alternate_Phone__c</fullName>
        <label>Owner 1 Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_1_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner 1 Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_1_Ethnicity_F__c</fullName>
        <formula>Text( Owner_1__r.Ethnicity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner 1 Ethnicity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_Ethnicity__c</fullName>
        <label>Owner 1 Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ethnicity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_1_First_Name__c</fullName>
        <label>Owner 1 First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_Home_Phone__c</fullName>
        <label>Owner 1 Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_1_Language__c</fullName>
        <label>Owner 1 Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_1_Last_Name__c</fullName>
        <label>Owner 1 Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_Middle_Name__c</fullName>
        <label>Owner 1 Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_Race__c</fullName>
        <label>Owner 1 Race</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Race</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_1_SSN__c</fullName>
        <description>Owner 1 SSN</description>
        <label>Owner 1 SSN</label>
        <length>11</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Owner_1_Sex__c</fullName>
        <label>Owner 1 Sex</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_1_Work_Phone__c</fullName>
        <label>Owner 1 Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Mouse Over the Person&apos;s Name to See Full Details!</inlineHelpText>
        <label>Owner 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Rehab Projects (Owner 1)</relationshipLabel>
        <relationshipName>Rehab_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_2_Age__c</fullName>
        <label>Owner 2 Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_2_Alt_Phone__c</fullName>
        <label>Owner 2 Alt Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_2_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner 2 Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_2_Ethnicity__c</fullName>
        <label>Owner 2 Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ethnicity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_2_First_name__c</fullName>
        <label>Owner 2 First name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2_Home_Phone__c</fullName>
        <label>Owner 2 Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_2_Language__c</fullName>
        <label>Owner 2 Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_2_Last_Name__c</fullName>
        <label>Owner 2 Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2_Middle_Name__c</fullName>
        <label>Owner 2 Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2_Race__c</fullName>
        <label>Owner 2 Race</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Race</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_2_SSN__c</fullName>
        <description>Owner 2 SSN</description>
        <label>Owner 2 SSN</label>
        <length>11</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Owner_2_Sex__c</fullName>
        <label>Owner 2 Sex</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_2_Work_Phone__c</fullName>
        <label>Owner 2 Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Mouse Over the Person&apos;s Name to See Full Details!</inlineHelpText>
        <label>Owner 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Rehab Projects (Owner 2)</relationshipLabel>
        <relationshipName>Rehab_Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Builder_Dollars__c</fullName>
        <label>Owner/Builder Dollars</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner_Builder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner/Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Funds__c</fullName>
        <label>Owner Funds</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner_Occupied_Units__c</fullName>
        <label>Owner Occupied Units</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Participating_Units__c</fullName>
        <label>Participating Units</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_AMI__c</fullName>
        <label>Percent AMI</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Completed__c</fullName>
        <label>Project Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start__c</fullName>
        <label>Project Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Rehab Projects</relationshipLabel>
        <relationshipName>Rehab_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RA_Amount__c</fullName>
        <label>RA Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RA_Check_Date__c</fullName>
        <label>RA Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RA_Contractor_TaxID_Old__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RA Contractor TaxID Old</label>
        <referenceTo>Rehab_Contractor__c</referenceTo>
        <relationshipLabel>Rehab Projects (RA Contractor TaxID)</relationshipLabel>
        <relationshipName>Rehab_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RA_Contractor_TaxID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RA Contractor TaxID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rehab Projects (RA Contractor TaxID 1)</relationshipLabel>
        <relationshipName>Rehab_Projects5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RA_Invoice_Number__c</fullName>
        <label>RA Invoice Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RA_Order_Date__c</fullName>
        <label>RA Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RA_Referral_Source__c</fullName>
        <label>RA Referral Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RA_Result__c</fullName>
        <label>RA Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Rehab_Test_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RA_Test_Date__c</fullName>
        <label>RA Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RA_Test_Type__c</fullName>
        <label>RA Test Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Rehab_Test_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Re_Evaluation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-Evaluation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relocation_Dollars__c</fullName>
        <label>Relocation Dollars</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Relocation_Number_of_Units__c</fullName>
        <label>Relocation Number of Units</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relocation_notice__c</fullName>
        <label>Relocation notice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_For_Funds__c</fullName>
        <label>Request For Funds</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Work__c</fullName>
        <label>Requested Work</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>S__c</fullName>
        <label>Number of Structures</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Soft_Other_Costs__c</fullName>
        <label>Soft/Other Costs</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <label>Street Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Number__c</fullName>
        <label>Street Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Area_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Mouse Over the Number to see information on the selected Target Area</inlineHelpText>
        <label>Target Area 2</label>
        <referenceTo>Area_Program__c</referenceTo>
        <relationshipLabel>Rehab Projects (Target Area 2)</relationshipLabel>
        <relationshipName>Rehab_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Area_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Mouse Over the Number to see information on the selected Target Area</inlineHelpText>
        <label>Target Area 3</label>
        <referenceTo>Area_Program__c</referenceTo>
        <relationshipLabel>Rehab Projects (Target Area 3)</relationshipLabel>
        <relationshipName>Rehab_Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Budget__c</fullName>
        <formula>Contract_1_Dollars__c + Contract_2_Dollars__c + Contract_3_Lead_Dollars__c + Owner_Builder_Dollars__c + Relocation_Dollars__c + Contractor_Paid_Relocation_Dollars__c + Soft_Other_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Resources__c</fullName>
        <formula>HC_Loan_Dollars__c + HC_Grant_Dollars__c + Owner_Funds__c + Other_Loans_Grants_Dollars__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Resources</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>